Aggiunte classi per la gestione dei pannelli (nifty) per gli oggetti selezionati e le risorse disponibili dal player