@@ -14,8 +14,7 @@ public abstract class AbstractCharacter extends AbstractObject
 	private static final float PACE = 5;
 
 	private ArrayList<Pair<Integer, Integer>> path;
-	private Pair<Float, Float> currentVector = new Pair<Float, Float>( new Float( 0.0 ), new Float(
-			0.0 ) );
+	private Pair<Float, Float> currentVector = new Pair<Float, Float>(new Float(0.0), new Float(0.0));
 	private int numberOfIterationsPerVector;
 
 	protected String name;
@@ -28,62 +27,58 @@ public abstract class AbstractCharacter extends AbstractObject
 	protected Lock readLock = lock.readLock();
 	protected Lock writeLock = lock.writeLock();
 
-	public AbstractCharacter( String name, float x, float y, int health, int bagDimension )
+	public AbstractCharacter(String name, float x, float y, int health, int bagDimension)
 	{
-		super( x, y, 0, 0 ); // TODO
+		super(x, y, 0, 0); // TODO
 		this.name = name;
 		this.health = health;
-		this.bag = new Inventory( bagDimension );
+		this.bag = new Inventory(bagDimension);
 	}
 
 	private void computeCurrentVector()
 	{
-		currentVector = new Pair<Float, Float>( ( float ) ( -path.get( 0 ).getFirst() + path
-				.get( 1 ).getFirst() ), ( float ) ( -path.get( 0 ).getSecond() + path.get( 1 )
-				.getSecond() ) );
+		currentVector = new Pair<Float, Float>((float) (-path.get(0).getFirst() + path.get(1).getFirst()), (float) (-path.get(0).getSecond() + path
+				.get(1).getSecond()));
 
-		numberOfIterationsPerVector = ( int ) ( MyMath.distanceInteger( path.get( 0 ).getFirst(), path
-				.get( 0 ).getSecond(), path.get( 1 ).getFirst(), path.get( 1 ).getSecond() ) / PACE );
+		numberOfIterationsPerVector = (int) (MyMath.distanceInteger(path.get(0).getFirst(), path.get(0).getSecond(), path.get(1).getFirst(), path
+				.get(1).getSecond()) / PACE);
 		paceX = currentVector.getFirst() / numberOfIterationsPerVector;
 		paceY = currentVector.getSecond() / numberOfIterationsPerVector;
 
-		System.out.println( numberOfIterationsPerVector );
-		System.out.println( "paceX = " + paceX );
-		System.out.println( "paceY = " + paceY );
+		System.out.println(numberOfIterationsPerVector);
+		System.out.println("paceX = " + paceX);
+		System.out.println("paceY = " + paceY);
 
 	}
 
-	public void setPath( ArrayList<Pair<Integer, Integer>> path )
+	public void setPath(ArrayList<Pair<Integer, Integer>> path)
 	{
 		writeLock.lock();
 
-		System.out.println( "path assegnato per la " + counter++ + " volta" );
-		System.out.println( "size del path " + path.size() );
+		System.out.println("path assegnato per la " + counter++ + " volta");
+		System.out.println("size del path " + path.size());
 		this.path = path;
 
 		System.out.println();
 		System.out.println();
-		System.out.println( "Path : " );
-		for( Pair<Integer, Integer> pair : path )
+		System.out.println("Path : ");
+		for (Pair<Integer, Integer> pair : path)
 		{
-			System.out.println( pair );
+			System.out.println(pair);
 
 		}
 		System.out.println();
 		System.out.println();
-		if( path.size() > 1 )
+		if (path.size() > 1)
 		{
 			computeCurrentVector();
 		}
 		else
 		{
-			Pair<Integer, Integer> point = new Pair<Integer, Integer>( path.get( 0 ).getFirst(),
-					path.get( 0 ).getSecond() );
-			currentVector = new Pair<Float, Float>( new Float( point.getFirst() - x ), new Float(
-					point.getSecond() - y ) );
+			Pair<Integer, Integer> point = new Pair<Integer, Integer>(path.get(0).getFirst(), path.get(0).getSecond());
+			currentVector = new Pair<Float, Float>(new Float(point.getFirst() - x), new Float(point.getSecond() - y));
 
-			numberOfIterationsPerVector = ( int ) ( MyMath.distanceInteger( ( int ) x, point.getFirst(),
-					( int ) y, point.getSecond() ) / PACE );
+			numberOfIterationsPerVector = (int) (MyMath.distanceInteger((int) x, point.getFirst(), (int) y, point.getSecond()) / PACE);
 		}
 		writeLock.unlock();
 	}
@@ -95,17 +90,17 @@ public abstract class AbstractCharacter extends AbstractObject
 		try
 		{
 			writeLock.lock();
-			if( path == null || path.isEmpty() )
+			if (path == null || path.isEmpty())
 				return false;
 
 			numberOfIterationsPerVector--;
-			System.out.println( "numero iterazioni " + numberOfIterationsPerVector );
-			System.out.println( "x=" + x + "| y=" + y );
+			System.out.println("numero iterazioni " + numberOfIterationsPerVector);
+			System.out.println("x=" + x + "| y=" + y);
 
-			if( numberOfIterationsPerVector <= 0 )
+			if (numberOfIterationsPerVector <= 0)
 			{
-				path.remove( 0 );
-				if( path.size() > 1 )
+				path.remove(0);
+				if (path.size() > 1)
 				{
 					computeCurrentVector();
 				}
@@ -116,8 +111,8 @@ public abstract class AbstractCharacter extends AbstractObject
 
 				numberOfIterationsPerVector--;
 			}
-			setX( ( ( float ) ( x + paceX ) ) );
-			setY( ( float ) ( y + paceY ) );
+			setX(((float) (x + paceX)));
+			setY((float) (y + paceY));
 
 			return true;
 
@@ -164,5 +159,10 @@ public abstract class AbstractCharacter extends AbstractObject
 		{
 			readLock.unlock();
 		}
+	}
+
+	public String getName()
+	{
+		return name;
 	}
 }
